# demo_network_filter

./: CMakeLists.txt  DemoNetworkFilter.camkes  README.md  run_demo.sh  system_config.h
axivion/: analysis_config.json  analysis_config_axivion_template.json  analysis_config_misra-c-2012.json  axivion_config.json  build.sh  compiler_config.json  project_config.json  set_axivion_config  set_common_paths  start_analysis.sh
components/ChanMux/: ChanMux_config.c
components/FilterListener/: FilterListener.camkes
components/FilterListener/src/: FilterListener.c
components/FilterSender/: FilterSender.camkes  if_FilterSender.camkes
components/FilterSender/src/: FilterSender.c
components/NwStack/: NwStack.camkes
components/NwStack/src/: NwStack.c
docker/: entrypoint.sh
host_applications/: filter_demo_receiver.py  filter_demo_sender.py
host_applications/data/: input_data.txt
host_applications/protocol/: filter_demo_protocol.py
host_applications/util/: filter_demo_msg.proto  filter_demo_util.py
host_applications/utils/: filter_demo_utils.py
plat/nitrogen6sx/: plat_nic.camkes  plat_nic.cmake
plat/zynq7000/: plat_nic.camkes  plat_nic.cmake
protocol/: MessageProtocol.c  MessageProtocol.h
